Additional routes for user details

--- a/src/templates/admin/lookup.html
+++ b/src/templates/admin/lookup.html
@@ -73,6 +73,10 @@
         ng-if="'private.lookupCharge' | isState"
         data-model="vm.Response"
     ></lookup-charge>
+    <lookup-user-logs
+        ng-if="'private.lookupUserLogs' | isState"
+        data-model="vm.Response"
+    ></lookup-user-logs>
 </div>
 
 <div>
