--- a/src/templates/admin/lookup/logs.html
+++ b/src/templates/admin/lookup/logs.html
@@ -1,4 +1,4 @@
-<form method="POST" class="list-group-item form-inline text-center" ng-submit="GetUserLogs()">
+<form method="POST" class="list-group-item form-inline text-center" ng-submit="vm.GetUserLogs()">
     <a href class="btn btn-primary btn-lg" ng-click="GetUserLogs()" ng-disabled="loading">View authentication logs</a>
     &nbsp;
     <strong>UserID:</strong>
