--- a/src/templates/admin/lookup/user.html
+++ b/src/templates/admin/lookup/user.html
@@ -589,7 +589,7 @@
                                 class="btn btn-primary"
                                 type="submit"
                             >
-                                <span class="fa fa-retweet"></span> Reset Login Password </button>
+                                <span class="fa fa-retweet"></span> Reset login password </button>
                         </form>
 
                         <div class="clearfix"></div>
