--- a/src/templates/admin/lookup/user.html
+++ b/src/templates/admin/lookup/user.html
@@ -659,7 +659,7 @@
                         <form
                             method="POST"
                             class="btn-group"
-                            ng-submit="vm.ViewUserLogs()"
+                            ng-submit="vm.ViewUserLogs(result.User)"
                         >
                             <input
                                 type="hidden"
