Logs and payments viewing now works + some convention changes

--- a/src/templates/admin/lookup/logs.html
+++ b/src/templates/admin/lookup/logs.html
@@ -3,7 +3,12 @@
     ng-if="vm.Response"
 >
 
+
     <div class="col-md-12">
+
+        <h1>Authentication logs
+        <p class="pull-right">UserID: {{ vm.UserID }}&nbsp;</p>
+        </h1>
 
         <div class="account">
 
