--- a/src/templates/admin/lookup/user.html
+++ b/src/templates/admin/lookup/user.html
@@ -1015,7 +1015,7 @@
                         <form
                             class="list-group-item text-center"
                             method="POST"
-                            ng-submit="deletePaymentsMethod(payment.ID)"
+                            ng-submit="vm.DeletePaymentsMethod(payment.ID)"
                         >
                             <button
                                 type="submit"
