--- a/src/templates/admin/lookup/messages.html
+++ b/src/templates/admin/lookup/messages.html
@@ -1,5 +1,5 @@
 <div class="list-group-item form-inline text-center">
-    <a href class="btn btn-primary btn-lg" ng-click="GetUserMessages()" ng-disabled="loading">View messages</a>
+    <a href class="btn btn-primary btn-lg" ng-click="vm.GetUserMessages()" ng-disabled="loading">View messages</a>
     &nbsp;
     <strong>Page size:</strong>
     <input type="text" class="form-control" ng-style="{width: '100px'}" ng-init="PageSize = 50"  ng-model="PageSize">
@@ -12,19 +12,19 @@
     &nbsp;
     <strong>Location:</strong>
     <label>
-        <select ng-model="currentMessageLocationOption" class="form-control" ng-options="value.label for value in messageLocationOptions"></select>
+        <select ng-model="vm.currentMessageLocationOption" class="form-control" ng-options="value.label for value in vm.messageLocationOptions"></select>
     </label>
 </div>
 <p class="text-center">
     <em>(This can take up to a minute and will freeze the app.)</em>
 </p>
 
-<div class="account" ng-if="messagesResponse.data">
+<div class="account" ng-if="vm.Response.data">
     <div class="list-group-item form-inline">
         <span>Listing for user:</span>
-        <strong>{{ messagesResponse.data.User  }}</strong>,
+        <strong>{{ vm.Response.data.User  }}</strong>,
         <span>Total messages matching criteria:</span>
-        <strong>{{ messagesResponse.data.Total }}</strong>
+        <strong>{{ vm.Response.data.Total }}</strong>
     </div>
     <table class="table table-bordered table-inline table-striped">
         <thead>
@@ -69,7 +69,7 @@
     </table>
 </div>
 
-<div ng-if="messagesResponse.data">
+<div ng-if="vm.Response.data">
     <hr>
     <a class="btn btn-link" ng-click="advanced = !advanced">Show / Hide raw response</a>
     <pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'100%'}">{{ messagesResponse | json }}</pre>
