--- a/src/templates/admin/lookup/messages.html
+++ b/src/templates/admin/lookup/messages.html
@@ -19,12 +19,12 @@
     <em>(This can take up to a minute and will freeze the app.)</em>
 </p>
 
-<div class="account" ng-if="vm.Response.data">
+<div class="account" ng-if="vm.Response">
     <div class="list-group-item form-inline">
         <span>Listing for user:</span>
-        <strong>{{ vm.Response.data.User  }}</strong>,
+        <strong>{{ vm.Response.User  }}</strong>,
         <span>Total messages matching criteria:</span>
-        <strong>{{ vm.Response.data.Total }}</strong>
+        <strong>{{ vm.Response.Total }}</strong>
     </div>
     <table class="table table-bordered table-inline table-striped">
         <thead>
@@ -38,7 +38,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="message in messagesResponse.data.Messages">
+            <tr ng-repeat="message in vm.Messages">
                 <td style="width: 140px">{{ message.Time * 1000 | date:'yyyy/MM/dd HH:mm:ss' }}
                 </td>
                 <td>
@@ -69,8 +69,8 @@
     </table>
 </div>
 
-<div ng-if="vm.Response.data">
+<div ng-if="vm.Messages">
     <hr>
     <a class="btn btn-link" ng-click="advanced = !advanced">Show / Hide raw response</a>
-    <pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'100%'}">{{ messagesResponse | json }}</pre>
+    <pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'100%'}">{{ vm.Messages | json }}</pre>
 </div>
