--- a/src/templates/admin/lookup/user.html
+++ b/src/templates/admin/lookup/user.html
@@ -409,7 +409,7 @@
                         <form
                             method="POST"
                             class="btn-group"
-                            ng-submit="vm.ViewUserMessages()"
+                            ng-submit="vm.ViewUserMessages(result)"
                         >
                             <input
                                 type="hidden"
